Updated description of day 19, introduced AoC library, and performed some refactoring